--- a/ui.glade
+++ b/ui.glade
@@ -55,7 +55,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkSpinner">
+              <object class="GtkSpinner" id="search_spinner">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
               </object>
@@ -65,11 +65,12 @@
               </packing>
             </child>
             <child>
-              <object class="GtkButton">
+              <object class="GtkButton" id="search_location">
                 <property name="label" translatable="yes">Search</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <signal name="clicked" handler="on_search_location_clicked" swapped="no"/>
               </object>
               <packing>
                 <property name="left_attach">3</property>
