--- a/ui.glade
+++ b/ui.glade
@@ -14,6 +14,8 @@
       <object class="GtkGrid">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
+        <property name="hexpand">True</property>
+        <property name="vexpand">True</property>
         <child>
           <object class="GtkGrid">
             <property name="visible">True</property>
@@ -90,33 +92,25 @@
             <property name="vexpand">True</property>
             <property name="tab_pos">left</property>
             <child>
-              <object class="GtkBox">
+              <object class="GtkScrolledWindow">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="homogeneous">True</property>
+                <property name="can_focus">True</property>
+                <property name="hscrollbar_policy">never</property>
+                <property name="shadow_type">in</property>
                 <child>
-                  <placeholder/>
-                </child>
-                <child>
-                  <placeholder/>
-                </child>
-                <child>
-                  <placeholder/>
-                </child>
-                <child>
-                  <placeholder/>
-                </child>
-                <child>
-                  <placeholder/>
-                </child>
-                <child>
-                  <placeholder/>
-                </child>
-                <child>
-                  <placeholder/>
-                </child>
-                <child>
-                  <placeholder/>
+                  <object class="GtkViewport">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <child>
+                      <object class="GtkFlowBox" id="forecasting_box">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="min_children_per_line">6</property>
+                        <property name="max_children_per_line">8</property>
+                        <property name="selection_mode">none</property>
+                      </object>
+                    </child>
+                  </object>
                 </child>
               </object>
             </child>
